correçao geral da POO